--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -129,7 +129,7 @@
 
         <syncfusion:Ribbon
             x:Name="_ribbon"
-            Margin="4,0,0,0"
+            Margin="0,0,0,0"
             VerticalAlignment="Stretch"
             Panel.ZIndex="0"
             syncfusion:Ribbon.IsAutoSizeFormEnabled="True"
@@ -142,9 +142,9 @@
             ShowCustomizeRibbon="True"
             Visibility="Visible">
 
-            <syncfusion:Ribbon.QuickAccessToolBar>
+            <!--<syncfusion:Ribbon.QuickAccessToolBar>
                 <syncfusion:QuickAccessToolBar Margin="65,0,0,0" />
-            </syncfusion:Ribbon.QuickAccessToolBar>
+            </syncfusion:Ribbon.QuickAccessToolBar>-->
 
             <!--  Contextual Tabs  -->
             <syncfusion:Ribbon.ContextTabGroups>
@@ -1741,7 +1741,7 @@
         <Border
             Width="70"
             Height="30"
-            Margin="0,24,0,0"
+            Margin="0,-2,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="top"
             Background="{DynamicResource ContentBackgroundAlt2}"
@@ -1750,7 +1750,7 @@
         <Border
             Width="42"
             Height="49"
-            Margin="13,0,0,0"
+            Margin="13,-30,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Background="Transparent"
@@ -1777,7 +1777,7 @@
         <Border
             Width="42"
             Height="49"
-            Margin="13,0,0,0"
+            Margin="13,-30,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="top"
             Background="Transparent"
@@ -1803,7 +1803,7 @@
             </Border>
         </Border>
 
-        <feather:GuidedTour
+        <!--<feather:GuidedTour
             Name="guide"
             AllowDismiss="True"
             Animate="True" />
@@ -1856,7 +1856,7 @@
                     </Grid>
                 </Grid>
             </Border>
-        </hc:Drawer>
+        </hc:Drawer>-->
         
     </Grid>
     
