--- a/WolvenKit/Views/Shell/StatusBarView.xaml
+++ b/WolvenKit/Views/Shell/StatusBarView.xaml
@@ -4,7 +4,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Fluent="urn:fluent-ribbon"
-    xmlns:WolvenKit="clr-namespace:WolvenKit"
     xmlns:reactiveUi="http://reactiveui.net"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
@@ -12,6 +11,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:shell="clr-namespace:WolvenKit.ViewModels.Shell;assembly=WolvenKit.App"
     d:DataContext="{d:DesignInstance Type=shell:StatusBarViewModel}"
+    d:DesignWidth="800"
     mc:Ignorable="d">
 
     
@@ -31,7 +31,7 @@
             <Fluent:StatusBarItem Title="Status"
                           
                           HorizontalAlignment="Left">
-                <TextBlock Text="{Binding Status}" />
+                <TextBlock Text="{Binding Status}" Margin="10,0,0,0"/>
             </Fluent:StatusBarItem>
 
 
