--- a/WolvenKit/Views/Documents/DocumentView.xaml
+++ b/WolvenKit/Views/Documents/DocumentView.xaml
@@ -261,7 +261,6 @@
                                     AutoGenerateColumns="False"
                                     ChildPropertyName="Children"
                                     ColumnSizer="FillColumn"
-                                    SelectionChanged="TreeView_OnSelectionChanged"
                                     ItemsSource="{Binding Chunks}"
                                     SelectedItem="{Binding SelectedChunk}"
                                     Style="{DynamicResource SyncfusionSfTreeGridStyle}">
@@ -402,19 +401,19 @@
             <Grid.Resources>
 
                 <DataTemplate x:Key="CommmonTemplate">
-                    <TextBlock Padding="5" Text="{Binding Value}"  />
+                    <TextBlock Padding="5" Text="{Binding Value}" Foreground="Gray" />
                 </DataTemplate>
 
                 <DataTemplate x:Key="StringTemplateView">
-                    <TextBox
-                                    Height="22"
-                                    Margin="0"
-                                    Padding="3,3,0,0"
-                                    VerticalAlignment="Center"
-                                    Background="Transparent"
-                                    BorderBrush="Transparent"
-                                    Style="{DynamicResource MahApps.Styles.TextBox.DataGrid.Editing}"
-                                    Text="{Binding Property.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                    <TextBox syncfusion:FocusManagerHelper.FocusedElement="True"
+                             Height="22"
+                             Margin="0"
+                             Padding="3,3,0,0"
+                             VerticalAlignment="Center"
+                             Background="Transparent"
+                             BorderBrush="Transparent"
+                             Style="{DynamicResource MahApps.Styles.TextBox.DataGrid.Editing}"
+                             Text="{Binding Property.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                         <hc:Interaction.Triggers>
                             <hc:EventTrigger EventName="PreviewTextInput">
                                 <hc:InvokeCommandAction Command="{Binding PreviewTextInputCommand}" />
@@ -425,24 +424,24 @@
 
                 <DataTemplate x:Key="ColorTemplateView">
 
-                    <syncfusion:ColorPickerPalette
-                                    GenerateThemeVariants="False"
-                                   Padding="3,-4,0,0"
-                                   Color="{Binding DisplayColor}"
-                                    SelectedCommand="{Binding SelectedColorCommand}"
-                                    d:DataContext="{d:DesignInstance shell:RedColorViewModel}" />
+                    <syncfusion:ColorPickerPalette syncfusion:FocusManagerHelper.FocusedElement="True"
+                                                   GenerateThemeVariants="False"
+                                                   Padding="3,-4,0,0"
+                                                   Color="{Binding DisplayColor}"
+                                                   SelectedCommand="{Binding SelectedColorCommand}"
+                                                   d:DataContext="{d:DesignInstance shell:RedColorViewModel}" />
                 </DataTemplate>
 
                 <DataTemplate x:Key="RefTemplateView">
-                    <TextBox
-                                    Height="22"
-                                    Margin="0"
-                                    Padding="3,3,0,0"
-                                    VerticalAlignment="Center"
-                                    Background="Transparent"
-                                    BorderBrush="Transparent"
-                                    Style="{DynamicResource MahApps.Styles.TextBox.DataGrid.Editing}"
-                                    Text="{Binding Property.DepotPath}">
+                    <TextBox    syncfusion:FocusManagerHelper.FocusedElement="True"
+                                Height="22"
+                                Margin="0"
+                                Padding="3,3,0,0"
+                                VerticalAlignment="Center"
+                                Background="Transparent"
+                                BorderBrush="Transparent"
+                                Style="{DynamicResource MahApps.Styles.TextBox.DataGrid.Editing}"
+                                Text="{Binding Property.DepotPath}">
                         <hc:Interaction.Triggers>
                             <hc:EventTrigger EventName="PreviewTextInput">
                                 <hc:InvokeCommandAction Command="{Binding PreviewTextInputCommand}" />
@@ -451,10 +450,9 @@
                     </TextBox>
                 </DataTemplate>
 
-
                 <DataTemplate x:Key="RedboolTemplate">
                     <CheckBox syncfusion:FocusManagerHelper.FocusedElement="True"
-                              Margin="0"
+                              Margin="3,0,0,0"
                               Padding="5"
                               HorizontalAlignment="Left"
                               IsChecked="{Binding Property.Value}"
@@ -472,11 +470,19 @@
                 </DataTemplate>
 
                 <DataTemplate x:Key="EnumTemplate">
-                    <templates:EnumTemplateView RedEnum="{Binding Property}" />
+                    <templates:EnumTemplateView
+                        syncfusion:FocusManagerHelper.FocusedElement="True"
+                        RedEnum="{Binding Property}"
+                        d:DataContext="{d:DesignInstance shell:ChunkPropertyViewModel }" />
                 </DataTemplate>
 
                 <DataTemplate x:Key="HandleTemplate">
-                    <templates:HandleTemplateView RedChunkPtr="{Binding Property}" />
+                    <templates:HandleTemplateView
+                        syncfusion:FocusManagerHelper.FocusedElement="True"
+                        RedChunkPtr="{Binding Property}"
+                      d:DataContext="{d:DesignInstance shell:ChunkPropertyViewModel }"
+                      GoToChunkRequested="HandleTemplateView_OnGoToChunkRequested"
+                      />
                 </DataTemplate>
 
                 <templates:EditableVariableDataTemplateSelector
@@ -517,7 +523,6 @@
                                    AutoGenerateColumns="False"
                                    ChildPropertyName="Children"
                                    ColumnSizer="Star"
-                            
                                    ItemsSource="{Binding ChunkProperties}"
                                    Style="{DynamicResource SyncfusionSfTreeGridStyle}"
             >
