--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -740,6 +740,7 @@
                                         Height="auto"
                                         HorizontalAlignment="Center"
                                         VerticalAlignment="Stretch"
+                                        Foreground="Green"
                                         Kind="Play" />
                                 </DataTemplate>
                             </syncfusion:RibbonButton.IconTemplate>
@@ -837,6 +838,7 @@
                                         Height="auto"
                                         HorizontalAlignment="Center"
                                         VerticalAlignment="Stretch"
+                                        Foreground="CornflowerBlue"
                                         Kind="Save" />
                                 </DataTemplate>
                             </syncfusion:RibbonButton.IconTemplate>
@@ -856,6 +858,7 @@
                                         Height="auto"
                                         HorizontalAlignment="Center"
                                         VerticalAlignment="Stretch"
+                                        Foreground="CornflowerBlue"
                                         Kind="SaveAll" />
                                 </DataTemplate>
                             </syncfusion:RibbonButton.IconTemplate>
@@ -891,7 +894,7 @@
                                     Height="auto"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Stretch"
-                                    Foreground="{DynamicResource MaterialDarkRibbonBackgroundBrush}"
+                                    Foreground="DarkGoldenrod"
                                     Kind="FolderOpened" />
                             </DataTemplate>
                         </syncfusion:RibbonButton.IconTemplate>
@@ -911,6 +914,7 @@
                                     Height="auto"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Stretch"
+
                                     Kind="NewFolder" />
                             </DataTemplate>
                         </syncfusion:RibbonButton.IconTemplate>
@@ -930,6 +934,7 @@
                                     Height="auto"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Stretch"
+                                    Foreground="Green"
                                     Kind="Play" />
                             </DataTemplate>
                         </syncfusion:RibbonButton.IconTemplate>
@@ -1032,6 +1037,7 @@
                                     Height="auto"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Stretch"
+                                    Foreground="CornflowerBlue"
                                     Kind="Save" />
                             </DataTemplate>
                         </syncfusion:RibbonButton.IconTemplate>
@@ -1051,6 +1057,7 @@
                                     Height="auto"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Stretch"
+                                    Foreground="CornflowerBlue"
                                     Kind="SaveAll" />
                             </DataTemplate>
                         </syncfusion:RibbonButton.IconTemplate>
